--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "expo": "~53.0.9",
@@ -17,8 +19,7 @@
     "react-native": "0.79.2",
     "react-native-date-picker": "^5.0.12",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
-    "@react-native-community/datetimepicker": "8.3.0"
+    "react-native-screens": "~4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
