--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
@@ -16,12 +17,12 @@
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-date-picker": "^5.0.12",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "react-native-screens": "~4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
