--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,20 +15,20 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
-    "expo": "~53.0.9",
+    "expo": "53.0.12",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.4",
     "react-native-date-picker": "^5.0.12",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "save": "^2.9.0",
-    "expo-updates": "~0.28.13"
+    "expo-updates": "~0.28.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
