--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -15,22 +16,30 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
-    "expo": "~53.0.9",
+    "expo": "53.0.12",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.5",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.15",
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
-    "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react": "^19.0.0",
+    "react-native": "^0.79.4",
     "react-native-date-picker": "^5.0.12",
+    "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "save": "^2.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.27.4",
+    "@babel/preset-env": "^7.27.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
+    "babel-jest": "^30.0.2",
+    "jest": "^30.0.2",
+    "react-test-renderer": "^19.0.0"
   },
   "private": true
 }
