--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
-    "expo": "53.0.12",
+    "expo": "^53.0.12",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.5",
     "expo-status-bar": "~2.2.3",
@@ -38,7 +38,7 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
     "babel-jest": "^30.0.2",
-    "jest": "^30.0.2",
+    "jest": "^29.7.0",
     "react-test-renderer": "^19.0.0"
   },
   "private": true
