--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
     "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-native": "^0.79.4",
     "react-native-date-picker": "^5.0.12",
     "react-native-dotenv": "^3.4.11",
@@ -38,8 +39,9 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
     "babel-jest": "^30.0.2",
-    "jest": "^29.7.0",
-    "react-test-renderer": "^19.0.0"
+    "jest": "~29.7.0",
+    "jest-expo": "~53.0.7",
+    "react-test-renderer": "^19.1.0"
   },
   "private": true
 }
