--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest --verbose"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -41,7 +41,7 @@
     "babel-jest": "^30.0.2",
     "jest": "~29.7.0",
     "jest-expo": "~53.0.7",
-    "react-test-renderer": "^19.1.0"
+    "react-test-renderer": "^19.0.0"
   },
   "private": true
 }
