--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,25 +16,25 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
-    "expo": "53.0.16",
+    "expo": "53.0.17",
     "expo-font": "13.3.2",
     "expo-image-picker": "~16.1.4",
     "expo-location": "18.1.6",
     "expo-status-bar": "~2.2.3",
-    "expo-updates": "~0.28.15",
+    "expo-updates": "~0.28.16",
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
+    "jest-expo": "~53.0.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.79.5",
-    "react-native-date-picker": "^5.0.12",
+    "react-native-date-picker": "^5.0.13",
     "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "save": "^2.9.0",
-    "jest-expo": "53.0.8"
+    "save": "^2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
