--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
     "expo": "53.0.17",
-    "expo-font": "13.3.2",
+    "expo-font": "^13.3.2",
     "expo-image-picker": "~16.1.4",
     "expo-location": "18.1.6",
     "expo-status-bar": "~2.2.3",
