--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
-    "expo": "53.0.17",
+    "expo": "^53.0.20",
     "expo-font": "^13.3.2",
     "expo-image-picker": "~16.1.4",
     "expo-location": "18.1.6",
