--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,7 @@
     "babel-jest": "^30.0.2",
     "jest": "~29.7.0",
     "jest-expo": "~53.0.7",
-    "react-test-renderer": "^19.0.0"
+    "react-test-renderer": "19.0.0"
   },
   "private": true
 }
